--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="{API_KEY}" />
+            android:value="AIzaSyD6cJIZw-ikxWdqtmfMqvJlZmSFZAjVE8A" />
 
         <activity
             android:name=".ui.MapsActivity"
